trustfall_core/test_data/tests/parse_errors/transform_with_variable_string_instead_of_array_with_variable_string.parse-error.ron
Err(TransformExpectsListNotString("+", "$zero", Pos(
  line: 4,
  column: 42,
)))
